# VEXIS-CLI-REMOTE

./: .env  .gitignore  DETAILED_GUIDE.md  LICENSE  README.md  SECURITY.md  TELEGRAM_INTEGRATION.md  check_environment.py  check_models.py  cleanup_secrets.py  command.json  config.example.yaml  config.yaml  manage_sdks.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  setup.py  system_check.py  test_cloud_models.py  test_concise_prompts.py  test_improved_prompts.py
Groq/: README.md  groq_models.py  provider.py
VEXIS-CLI-2/: .gitignore  DETAILED_GUIDE.md  README.md  check_environment.py  check_models.py  example_usage.py  manage_sdks.py  pyproject.toml  requirements.txt  run.py  setup.py  system_check.py  test_fix.py  test_improved_prompts.py  test_logging_simple.py  test_openrouter_logging.py  test_prompts.py
VEXIS-CLI-2/Groq/: groq_hello.py  groq_models.py
VEXIS-CLI-2/api/: __init__.py  anthropic_client.py  base.py  groq_client.py  microsoft_client.py  mistral_client.py  openai_client.py  openrouter_client.py  usage_example.py  xai_client.py
VEXIS-CLI-2/docker/: README.md  docker-compose.yml
VEXIS-CLI-2/docker/centos/: Dockerfile
VEXIS-CLI-2/docker/ubuntu/: entrypoint.sh
VEXIS-CLI-2/docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  ERROR_HANDLING.md  OLLAMA_INTEGRATION.md  README.md  TROUBLESHOOTING.md
VEXIS-CLI-2/src/ai_agent/: __init__.py
VEXIS-CLI-2/src/ai_agent/core_processing/: __init__.py  command_parser.py  five_phase_engine.py  terminal_history.py
VEXIS-CLI-2/src/ai_agent/external_integration/: __init__.py  model_runner.py  multi_provider_vision_client.py  ollama_provider.py  vision_api_client.py
VEXIS-CLI-2/src/ai_agent/platform_abstraction/: __init__.py
VEXIS-CLI-2/src/ai_agent/user_interface/: five_phase_app.py
VEXIS-CLI-2/src/ai_agent/utils/: __init__.py  config.py  curses_menu.py  environment_detector.py  exceptions.py  model_definitions.py  ollama_error_handler.py  ollama_manager.py  ollama_model_selector.py  sdk_installer.py  settings_manager.py
VEXIS-CLI-2/src/ai_agent/utils/yellow_selection/: README.md  __init__.py  clean_hierarchical_selector.py  main.py
VEXIS-mail-CLI/: .env.example  .gitignore  README.md  cli_settings.json  forwarder.js  index.js  package.json
api/: README.md  __init__.py  amazon_client.py  base.py  cohere_client.py  deepseek_client.py  google_client.py  integration_example.py  meta_client.py  minimax_client.py  openai_client.py  together_client.py  zhipuai_client.py
docker/alpine/: Dockerfile
docker/macos/: Dockerfile
docker/ubuntu/: Dockerfile
docker/windows/: Dockerfile  entrypoint.ps1
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  ERROR_HANDLING.md  OLLAMA_INTEGRATION.md  README.md  TROUBLESHOOTING.md
scripts/: run.js  start-server.js
src/: commandExecutor.ts  config.ts  index.ts  ollamaClient.ts  types.ts  whatsappClient.ts  whatsappClientAlt.ts
src/ai_agent/: __init__.py
src/ai_agent/core_processing/: command_output.py  five_phase_engine.py  save_command.py  task_robustness_manager.py  terminal_history.py
src/ai_agent/external_integration/: google_provider.py  model_runner.py  multi_provider_vision_client.py  ollama_provider.py  openrouter_provider.py  vision_api_client.py
src/ai_agent/platform_abstraction/: platform_detector.py
src/ai_agent/plugins/: __init__.py  example_plugin.py
src/ai_agent/telegram_integration/: __init__.py  contact_manager.py  error_notifier.py  message_handler.py  telegram_client.py
src/ai_agent/user_interface/: __init__.py  five_phase_app.py
src/ai_agent/utils/: config.py  cost_manager.py  curses_menu.py  dependency_checker.py  environment_detector.py  exceptions.py  interactive_menu.py  logger.py  model_definitions.py  ollama_model_selector.py  prompt_cache.py  provider_fallback.py  sdk_installer.py  security.py  settings_manager.py  structured_logger.py
src/ai_agent/utils/yellow_selection/: clean_interactive_menu.py  config.py  fallback_interactive_menu.py
terminal_history/: session_1776576228.json  session_1776576419.json  session_1776576419.json.bak  session_1776577020.json
tests/: conftest.py
tests/unit/: __init__.py  test_config_phase2_telegram_mode.py  test_cost_manager.py  test_exceptions.py  test_message_handler.py  test_phase2_goal_summary.py  test_phase2_telegram_updates.py  test_plugins.py  test_security.py
