[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vexis-cli-2"
version = "2.0.0"
description = "AI command-line agent for terminal automation and task execution"
readme = "README.md"
license = "MIT"
authors = [
    {name = "AInohogosya"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Automation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "automation", "cli", "terminal", "command-line"]
requires-python = ">=3.8"
dependencies = [
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "structlog>=23.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0.0",
    "ollama>=0.1.0",
    "pyautogui>=0.9.54; sys_platform=='darwin'",
    "pyobjc-framework-Cocoa>=9.0; sys_platform=='darwin'",
    "pywin32>=306; sys_platform=='win32'",
    "python-xlib>=0.33; sys_platform=='linux'",
]


[project.scripts]
"vexis-cli" = "ai_agent.user_interface.five_phase_app:main"
"vexis-cli-enhanced" = "ai_agent.user_interface.five_phase_app:main"

[project.urls]
Homepage = "https://github.com/vexis-project/VEXIS-CLI-2.0"
Repository = "https://github.com/vexis-project/VEXIS-CLI-2.0"
"Bug Reports" = "https://github.com/vexis-project/VEXIS-CLI-2.0/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_agent = [
    "config/*.yaml",
    "config/*.json", 
    "templates/*.txt",
    "scripts/*.sh",
    "scripts/*.ps1",
]
